<resources>
    <string name="app_name">Фитнес-тренер</string>
    <string name="statistics">Статистика</string>
    <string name="start">Начать</string>
    <string name="fitness_trainer">Фитнес тренер</string>
    <string name="select_exercise">Выберите упражнение</string>
    <string name="todo">TODO</string>
    <string name="arm_waving">arm_waving</string>
    <string name="title_activity_exercise_selection_menu">Exercise_selection_menu</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_start_exercise_menu">Start_exercise_menu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prised">Приседания</string>
    <string name="arm_waving_text_">Взмахи руками</string>
    <string name="description_prised_1">Приседания являются силовым упражнением для нижней части тела, которое также требует координации и равновесия. Для правильного выполнения этого упражнения, следуйте следующим шагам:</string>
    <string name="description_prised_2">1. Станьте на ширине плеч и выпрямите спину.</string>
    <string name="description_prised_3">2. Смотрите перед собой, чтобы сохранить правильную позицию тела.</string>
    <string name="description_prised_4">3. Выпрямите руки, держа телефон в правой руке и держите их на уровне плеч, держа ладони вниз.</string>
    <string name="description_prised_5">4. Начните приседать, сдвигая таз назад и ниже, как будто вы садитесь на стул.</string>
    <string name="description_prised_6">5. Опускайтесь, пока бедра не будут параллельны полу.</string>
    <string name="description_prised_7">6. Поднимитесь обратно в стоячее положение, расслабив руки и опустив их вдоль тела.</string>
    <string name="description_prised_8">7. Повторяйте упражнения пока не истечёт таймер, выполняя серию приседаний.</string>
    <string name="Standart_time">02:00</string>
    <string name="todo1">TODO</string>
    <string name="todo2" />
    <string name="stop_button">СТОП</string>
    <string name="timer_finished">00:00</string>
    <string name="score">0</string>
    <string name="todo4">TODO4</string>
    <string name="todo3">TODO3</string>
    <string name="statistics_title">Статистика</string>
    <string name="time">Время</string>
    <string name="count_of_squats">Кол-во приседаний</string>
    <string name="date">Дата</string>
    <string name="YourSquats">Ваши приседания</string>
    <string name="back_button">TODO</string>
    <string name="delete_database">Удалить Базу Данных</string>
    <string name="input_your_height">Введите ваш рост</string>
    <string name="height_in_cm">Рост в сантиметрах</string>
    <string name="todo6" />
    <string name="mm">мм</string>
    <string name="sm">см</string>
    <string name="cm">см</string>
    <string name="ОК">ОК</string>
    <string name="choose_your_height">Выберите ваш рост</string>
    <string name="timer">timer</string>
    <string name="минуты">minutes</string>
    <string name="minutes">мин</string>
    <string name="seconds">сек</string>
    <string name="ok">OK</string>
    <string name="HowManyTime">Сколько времени вы хотите заниматься</string>
    <string name="setTime">Установите время</string>
    <string name="Name_of_training">Введите название тренировки</string>
    <string name="title_activity_record_of_training">RecordOfTraining</string>
    <string name="Loading">Подготовка к записи</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Save">Сохранить</string>
    <string name="NotSave">Не сохранять</string>
    <string name="Choose">Выберите действие</string>
    <string name="You_End_The_Record">Вы завершили запись</string>
    <string name="x">X</string>
    <string name="fake_loading">Подготовка к записи</string>
    <string name="CreateWorkout">Создать тренировку</string>
    <string name="star">Star</string>
    <string name="background">Background</string>
    <string name="empty_name">название</string>
    <string name="Enter_description_optional">Введите описание (опциально)</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="workout">Тренировки</string>
    <string name="title_activity_profile">Profile</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="Exercises">Упражнения</string>
    <string name="mistakes">Ошибки: %d</string>
    <string name="Almost">Почти: %d</string>
    <string name="Right">Верно: %d</string>
</resources>