<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text="@string/x"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        android:shadowColor="@color/black_overlay"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/You_End_The_Record"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Choose"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#4E42BA"
            android:shadowColor="#C4FFFFFF"
            android:text="@string/Save"
            android:textColor="#81D4FA" />

        <Button
            android:id="@+id/button_discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NotSave"
            android:layout_marginStart="8dp"
            android:textColor="#4E42BA"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>
