<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo3"
        android:scaleType="centerCrop"
        android:src="@drawable/background_balls_3"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="344dp"
        android:freezesText="false"
        android:gravity="center|top"
        android:hapticFeedbackEnabled="false"
        android:padding="3dp"
        android:text="@string/fitness_trainer"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="20"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:backgroundTint="#59CC9B09"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="4"
        android:shadowRadius="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/statistics_button"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:backgroundTint="#5BBC733D"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/statistics"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        app:layout_constraintVertical_bias="0.226" />

    <ImageButton
        android:id="@+id/sound_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sound_icon_on" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@null"
        android:contentDescription="@string/todo4"
        app:layout_constraintTop_toBottomOf="@+id/sound_button"
        app:srcCompat="@drawable/gear" />


</androidx.constraintlayout.widget.ConstraintLayout>
